--- a/spiritgate.net/templates/page/packs.html
+++ b/spiritgate.net/templates/page/packs.html
@@ -1,9 +1,13 @@
 <div class="row">
     <div class="panel">
+        Coming soon: Ways to give us your money
+        <!--
         <div class="panel-body">
                 <p>Supporter packs are our way of drumming up funding for Spiritgate. In an effort to be as transparent as possible in this, we make all of our spending and income public <a href="/balancelog.html">on the balance log page</a> as well as adhering to a strict <a href="/spendingpolicy.html">spending policy</a> which makes sure the money you spend on packs goes back into making Spiritgate a better game.</p>
         </div>
+        !-->
     </div>
+    <!--
     <div class="col-sm-6">
         <div class="thumbnail">
             <img src="/image/rotting_tomb.jpg" alt="...">
@@ -21,4 +25,5 @@
             </div>
         </div>
     </div>
+    !-->
 </div>
