Shop now highlights in red items you cannot buy.
Signed-off-by: Gavin Gassmann <gassmann.gavin@gmail.com>

--- a/content/dota_addons/dawngatedota/panorama/styles/custom_game/shop_ui.css
+++ b/content/dota_addons/dawngatedota/panorama/styles/custom_game/shop_ui.css
@@ -144,3 +144,6 @@
 .current_inventory_item Image:active {
 	border: 2px solid #FFFFFF;
 }
+.item-label-expensive {
+	text-shadow: 0px 0px 2px 6.0 #FF000015;
+}
