--- a/content/dota_addons/dawngatedota/panorama/styles/custom_game/ability_bar_ui.css
+++ b/content/dota_addons/dawngatedota/panorama/styles/custom_game/ability_bar_ui.css
@@ -25,8 +25,8 @@
 #AbilityBarPanel {
 	vertical-align: bottom;
 	horizontal-align: center;
-	height: 55%;
-	width: height-percentage(150%);
+	height: 45%;
+	width: height-percentage(165%);
 }
 #AbilityBar {
 	width: 100%;
@@ -56,14 +56,15 @@
 	background-size: 100% 100%;
 }
 #AbilityBarLevelUps {
-	height: 9%;
-	width: 70%;
+	height: 25%;
+	width: 100%;
 	horizontal-align: center;
+	background-size: 100% 100%;
+	background-image: url("file://{images}/custom_game/ui/ability_panel_top.png");
 }
 #AbilityBarAbilities {
 	width: 100%;
 	height: 45%;
-	margin-top: 26%;
 }
 #AbilityBarBars {
 	width: 100%;
@@ -90,10 +91,21 @@
 .levelup-panel:active {
 	background-image: url("file://{images}/custom_game/hud/spell_learn_action_active.png");
 }
-.levelup-panel:disabled {
-	background-image: url("file://{images}/null.png");
-	background-size: 0% 0%;
-	border: 0px solid red;
+.disabled-levelup-pane {
+	height: 100%;
+	width: fill-parent-flow(1);
+	margin: 1px;
+	margin-bottom: 0px;
+	color: #020202;
+	text-align: center;
+	background-image: url("file://{images}/custom_game/hud/spell_learn_action_disabled.png");
+	background-size: 100% 100%;
+}
+.disabled-levelup-pane:hover {
+	background-image: url("file://{images}/custom_game/hud/spell_learn_action_disabled.png");
+}
+.disabled-levelup-pane:active {
+	background-image: url("file://{images}/custom_game/hud/spell_learn_action_disabled.png");
 }
 .level-indicator {
 	width: 10%;
