Added screenshot of the new UI.
Signed-off-by: Gavin Gassmann <gassmann.gavin@gmail.com>

--- a/spiritgate.net/templates/page/gallery.html
+++ b/spiritgate.net/templates/page/gallery.html
@@ -1,7 +1,7 @@
 <div class="row">
 	Some screenshots are not representative of the current version of the mod.
 	{% set files = glob("static/image/screenshots/*.*") %}
-	{{ files.reverse() }}
+	{{ files.reverse() or "" }}
 	{% for file in files %}
 		<div class="col-xs-6">
 			<a class="thumbnail" href="{{file}}">
